# ccf-coefficients

./: .talismanrc  README.md  pyproject.toml
ccfcoef/: cli.py
data/: SPECpower-2023-05-23.csv  SPECpower-2026-03-09.csv  amd-epyc-gen1.csv  amd-epyc-gen2.csv  amd-epyc-gen3.csv  amd-epyc-gen4.csv  amd-epyc-gen5.csv  amd-neoverse-n1.csv  aws-instances-latest-2026.csv  gcp-instances-latest-2026.csv  grid-emissions-factors-azure.csv  intel-broadwell.csv  intel-cascadelake.csv  intel-coffeelake.csv  intel-emeraldrapids.csv  intel-graniterapids.csv  intel-haswell.csv  intel-icelake.csv  intel-ivybridge.csv  intel-sapphirerapids.csv  intel-skylake-client.csv  intel-skylake-server.csv  intel-skylake.csv
output/: coefficients-aws-use.csv  coefficients-gcp-use.csv
tests/: test_cli.py  test_power_averages.py  test_usage_coefficients.py
