[tool.poetry]
name = "CCF Coefficients"
version = "0.1.0"
description = ""
authors = ["CCF Team at Thoughtworks"]
readme = "README.md"
packages = [{include = "ccfcoef"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
pytest = "^7.3.1"
pandas = "^2.0.1"
regex = "^2023.5.5"
requests = "^2.30.0"

[tool.poetry.scripts]
ccfcoef = "ccfcoef.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
